--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,33 +1,31 @@
-<div class="container form_styles">
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+  <header class="bg-primary text-white">
+    <nav class="d-flex justify-content-between p-2 align-items-center text-reset">   
+      <a href='/'><i class="fas fa-arrow-left fs-1 text-white"></i></a>
+      <h2 class="m-0 p-0">REGISTER</h2>
+      <%= f.submit "NEXT", class: "nav-link" %>
+    </nav> 
+  </header>
+  
   <%= render "devise/shared/error_messages", resource: resource %>
-  <div class="field">
-  <%= f.label :fullname %><br />
-  <%= f.text_field :name, autofocus: true, autocomplete: "email" %>
-</div>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+  
+  <div class="field mt-5">
+    <%= f.text_field :name, autofocus: true, autocomplete: "name", placeholder: "Full name", class: "form-control rounded-0" %>
   </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
+  
+  <div class="field mt-5">
+    <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder: "Email", class: "form-control rounded-0" %>
   </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+  
+  <div class="field mt-5">
+    <%= f.password_field :password, autocomplete: "new-password", placeholder: "Password", class: "form-control rounded-0" %>
   </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
+  
+  <div class="field mt-5">
+    <%= f.password_field :password_confirmation, autocomplete: "new-password", placeholder: "Confirm password", class: "form-control rounded-0" %>
+  </div>
+  
+  <div class="text-center mt-5">
+    <%= render "devise/shared/links" %>
   </div>
 <% end %>
-
-<%= render "devise/shared/links" %>
-</div>
