--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,10 +1,10 @@
 <section class = " d-flex flex-column align-items-center">
 
     <div class=" d-flex flex-column justify-content-center"  style="height: 500px;">
-    <h1 class="">ExpenseApp</h1>
+    <h1 class="">MiscellaneousApp</h1>
     </div>
     <div class="d-flex flex-column fixed-bottom align-items-center justify-content-center text-center">
-    <%= link_to "Log in", new_user_session_path, class: "text-white bg-primary w-100 p-3 nav-link"  %>
-    <%= link_to "Sign up", new_user_registration_path,  class: "nav-link p-3 w-100" %>
+    <%= link_to "LOG IN", new_user_session_path, class: "text-white bg-primary w-100 p-3 nav-link"  %>
+    <%= link_to "SIGN UP", new_user_registration_path,  class: "nav-link p-3 w-100" %>
     </div>
 </section>
