--- a/app/views/expenses/index.html.erb
+++ b/app/views/expenses/index.html.erb
@@ -1,4 +1,7 @@
-<section class="container-fluid main-container">
+<section>
+  <% if current_user %>
+        <%= render 'layouts/expenses_header' %>
+  <% end %>
 <div class="d-flex gap-2 justify-content-between align-items-center border border-secondary-subtle w-100  px-2 mt-2">
       <div>
       <%= image_tag "#{@group.icon}", :class => 'img-fluid img-thumbnail w-50' %>
