--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -1,10 +1,7 @@
 <main class="container-fluid main-container">
-  <% if flash[:notice] %>
-    <div class="alert alert-success">
-      <%= flash[:notice] %>
-    </div>
-  <% end %>
-
+<% if current_user %>
+        <%= render 'layouts/groups_header' %>
+      <% end %>
   <% @groups.each do |group| %>
     <%= link_to group_path(group), class: "text-decoration-none text-dark" do %>
       <div id="<%= dom_id group %>" class="px-2">
