--- a/app/views/groups/new.html.erb
+++ b/app/views/groups/new.html.erb
@@ -1,5 +1,5 @@
 <div class="mx-auto md:w-2/3 w-full">
-  <%= form_with(model: @group, url: groups_path, html: { id: 'myForm' }) do |f| %>
+  <%= form_with(model: @group, url: groups_path) do |f| %>
     <header class="bg-primary text-white p-2">
       <nav class="d-flex justify-content-between align-items-center text-center">
         <%= link_to groups_path do %>
@@ -37,7 +37,7 @@
           ['Utilities', 'utility-icons.jpg']
         ]), {}, class: 'form-select mb-4', id: 'icon', aria_label: "form-select category" %>
 
-        <%= f.hidden_field :user_id, value: current_user.id %>
+        <%= f.hidden_field :author_id, value: current_user.id %>
 
         <div>
           <%= f.label :name, 'Name', class: 'form-label' %>
@@ -47,5 +47,3 @@
     </div>
   <% end %>
 </div>
-
-<script src="/app/javascript/form.js"></script>
