--- a/app/views/layouts/_groups_header.html.erb
+++ b/app/views/layouts/_groups_header.html.erb
@@ -11,7 +11,7 @@
   </div>
   <div class="offcanvas-body">
     <div>
-      This is a  mobile web application where you can manage your budget: you have a list of transactions associated with a category, so that you can see how much money you spent and on what.
+      This is a  mobile web application where you can manage your budget: you have a list of transactions associated with categories.
     </div>
     <div class="dropdown mt-3">
       <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown">
